<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:id="@+id/main_layout"
    android:focusableInTouchMode="true"
    tools:context=".Activities.DeleteAccountActivity">

    <include layout="@layout/white_toolbar_whith_orange_bottom_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="260dp"
            android:layout_height="205dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/logo_description"
            app:srcCompat="@mipmap/logo_inverted" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_below="@+id/imageView"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:text="@string/est_s_seguro_de_marcharte" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/container_1"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_below="@+id/textView17"
            android:orientation="horizontal">

            <Button
                android:id="@+id/acceptButton"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_marginRight="20dp"
                android:background="@color/orange"
                android:text="@string/si"
                android:layout_marginEnd="20dp" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:background="@color/orange"
                android:text="@string/no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:visibility="gone"
            android:id="@+id/container_2"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            android:layout_alignParentLeft="true">

            <TextView
                android:id="@+id/password_label"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/escriba_su_contrase_a"
                android:textColor="@color/black"
                android:typeface="normal" />

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:background="@drawable/thin_orange_border_bottom"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black" />

            <android.support.v7.widget.CardView
                android:id="@+id/deleteAccountButton"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/orange"
                app:cardCornerRadius="25dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/eliminar_cuenta"
                        android:textColor="@color/white" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>


    </RelativeLayout>

</LinearLayout>