<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_loading"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.example.ifmfo.wannaeatapp.LoadingAppActivity">


    <ImageButton
        android:id="@+id/menu_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="20pt"
        android:layout_height="20pt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5pt"
        android:layout_marginTop="5pt"
        android:contentDescription="@string/menu_icon_description"
        app:srcCompat="@drawable/menu_button"
        android:layout_marginStart="5pt" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120pt"
        android:layout_height="100pt"
        android:layout_below="@+id/menu_button"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@mipmap/logo_inverted" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="10dp"
        android:text="@string/complete_address_label"
        android:textColor="@color/white"
        android:typeface="normal" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignRight="@+id/imageView"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/menu_button"
        android:layout_toRightOf="@+id/menu_button"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_map"
        android:drawableStart="@drawable/ic_action_map"
        android:ems="10"
        android:hint="Introduce aqui"
        android:inputType="text"
        android:text=""
        android:textColor="@color/black"
        android:textSize="16sp" />

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        app:cardBackgroundColor="@color/orange"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:id="@+id/searchRestaurantButton">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/search_restaurants_label"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
