<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    android:background="@drawable/gradiente_inicial">

    <include
        layout="@layout/transparent_toolbar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="259dp"
        android:layout_height="206dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@mipmap/logo_inverted" />

    <TextView
        android:id="@+id/login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/nete_a_nosotros"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:typeface="normal" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="87dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/register_name"
            android:layout_width="295dp"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_user_icon"
            android:drawableStart="@drawable/ic_user_icon"
            android:drawableTint="@color/white"
            android:ems="10"
            android:hint="@string/nombre_completo"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/register_phone"
            android:layout_width="295dp"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_phone_icon"
            android:drawableStart="@drawable/ic_phone_icon"
            android:drawableTint="@color/white"
            android:ems="10"
            android:hint="@string/n_mero_de_tel_fono"
            android:inputType="phone"
            android:maxEms="9"
            android:maxLength="9"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="295dp"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_user_icon"
            android:drawableStart="@drawable/ic_user_icon"
            android:drawableTint="@color/white"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="295dp"
            android:layout_height="40dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_password_icon"
            android:drawableStart="@drawable/ic_password_icon"
            android:drawableTint="@color/white"
            android:ems="10"
            android:layout_marginBottom="5dp"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/register_password2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_password_icon"
            android:drawableStart="@drawable/ic_password_icon"
            android:drawableTint="@color/white"
            android:ems="10"
            android:hint="Repite la Contraseña"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="@color/orange"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Registrarse"
                android:textColor="@color/white" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>