<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente_inicial"
    tools:context="com.example.ifmfo.wannaeatapp.Activities.LoadingAppActivity">

    <include
        layout="@layout/transparent_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/content_fragment_search_restaurant"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="260dp"
            android:layout_height="205dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/logo_description"
            app:srcCompat="@mipmap/logo_inverted" />


        <TextView
            android:id="@+id/login_label"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="302dp"
            android:gravity="center"
            android:text="Busca los mejores restaurantes de tu ciudad"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:typeface="normal" />

        <TextView
            android:id="@+id/RestaurantAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/restaurantAddressInput"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/restaurantAddressInput"
            android:layout_marginBottom="199dp"
            android:text="@string/complete_address_label"
            android:textColor="@color/white"
            android:typeface="normal" />

        <EditText
            android:id="@+id/restaurantAddressInput"
            android:layout_width="295dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="149dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_action_map"
            android:drawableStart="@drawable/ic_action_map"
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="LabelFor" />



        <android.support.v7.widget.CardView
            android:id="@+id/searchRestaurantButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="47dp"
            app:cardBackgroundColor="@color/orange"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/search_restaurants_label"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/locationAdvice"
            android:layout_width="295dp"
            android:layout_height="35dp"
            android:layout_below="@+id/restaurantAddressInput"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-149dp"
            android:visibility="invisible"
            app:cardBackgroundColor="@color/blue"
            app:cardElevation="5dp">

            <RelativeLayout
                android:id="@+id/location_advice_layout"
                android:layout_width="295dp"
                android:layout_height="35dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableLeft="@drawable/ic_action_current_location"
                    android:drawableStart="@drawable/ic_action_current_location"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:text="@string/posicion_actual"
                    android:textColor="@color/white"
                    android:layout_marginStart="40dp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>



</RelativeLayout>
